--- a/top.html
+++ b/top.html
@@ -1,1 +1,36 @@
-底部
+<!-- 头部 -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/top.css">
+</head>
+
+<body>
+    <!-- 顶部 -->
+    <header>
+        <!-- 版心 -->
+        <div>
+            <!-- 左侧 -->
+            <div>
+                <a href=""></a>
+                <a href="">首页</a>
+                <a href="">酷玩</a>
+                <a href="">导购</a>
+                <a href="">试用</a>
+                <a href="">报告</a>
+            </div>
+            <!-- 右侧 -->
+            <div>
+                <img src="./img/fdj.png" alt="">
+                <button>注册</button>
+            </div>
+        </div>
+    </header>
+</body>
+
+</html>
