--- a/register.html
+++ b/register.html
@@ -1,1 +1,21 @@
 <!-- 注册 -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/register.css">
+</head>
+
+<body>
+    <!-- 引入顶部 -->
+    <iframe src="./top.html" id="ifname-1" frameborder="0"></iframe>
+    <div class="register-box">
+        <p>注册极果</p>
+    </div>
+</body>
+
+</html>
