--- a/register.html
+++ b/register.html
@@ -12,10 +12,10 @@
 
 <body>
     <!-- 引入顶部 -->
-    <iframe src="./top.html" id="ifname-1" frameborder="0"></iframe>
+    <!-- <iframe src="./top.html" id="ifname-1" frameborder="0"></iframe>
     <div class="register-box">
         <p>注册极果</p>
-    </div>
+    </div> -->
 </body>
 
 </html>
