--- a/register.html
+++ b/register.html
@@ -14,8 +14,28 @@
     <!-- 引入顶部 -->
     <iframe src="./top.html" id="ifname-1" frameborder="0"></iframe>
     <div class="register-box">
+        <!-- 标题 -->
         <p>注册极果</p>
+        <!-- 版心 -->
+        <div>
+            <input type="text" placeholder="请登录手机号"><span class="h-span">请输入11位手机哈</span>
+            <input type="text" placeholder="请输入图片校验码">
+            <span id="r-span"></span>
+            <span class="h-span">请输入11位手机哈</span>
+            <input type="text" placeholder="请输入4位数字验证码">
+            <button>获取验证码</button>
+            <span class="h-span">请输入11位手机哈</span>
+            <input type="text" placeholder="请输入用户名">
+            <span class="h-span">请输入11位手机哈</span>
+            <input type="text" placeholder="请输新密码">
+            <span class="h-span">请输入11位手机哈</span>
+            <input type="text" placeholder="请确定新密码">
+            <span class="h-span">请输入11位手机哈</span>
+            <button id="zc">立即注册</button>
+        </div>
     </div>
+    <!-- 引入底部 -->
+    <iframe src="./bottom.html" id="ifname-2" frameborder="0"></iframe>
 </body>
 
 </html>
