新增a标签跳转

--- a/b-mf-a.html
+++ b/b-mf-a.html
@@ -49,7 +49,7 @@
                 5. 30天内不得凭借拉票重复中签试用，以当月首次为准，不得调换，遇有重复则资格顺延。<br>
                 6. 客服妹妹QQ： 3287633427<br>
             </p>
-            <p class="title-s">如何提高申请成功率</p>
+            <p class="title-s" id="mf">如何提高申请成功率</p>
             <p class="p">
                 1. 完善个人主页，展现专业性（请在手机端页面完善：m.jiguo.com）<br>
                 2. 试用计划明确且有新意<br>
