--- a/b-sw-a.html
+++ b/b-sw-a.html
@@ -53,7 +53,7 @@
                 2014年10月，极果Html5平台正式上线，开始固定在每周二、周五上线免费酷玩试用活动；<br>
                 2014年9月，极果正式成立，定位于“全球酷玩试用平台”，并开始在微信公众平台提供服务；
             </p>
-            <p class="title-s">联系我们</p>
+            <p class="title-s" id="sw">联系我们</p>
             <p class="title">战略合作：</p>
             <p class="p-small">
                 LaRiver <br>
