--- a/bottom.html
+++ b/bottom.html
@@ -34,60 +34,60 @@
                 <!-- 第一列 -->
                 <ul>
                     <li>免费试用</li>
-                    <li><a href="">试用流程</a></li>
-                    <li><a href="">如何提高成功率</a></li>
+                    <li><a href="./b-mf-a.html">试用流程</a></li>
+                    <li><a href="./b-mf-a.html#mf">如何提高成功率</a></li>
                 </ul>
                 <!-- 第二列 -->
                 <ul>
                     <li>友情链接</li>
                     <li>
-                        <a href="">智东西</a>
-                        <a href="">WEIBUSI</a>
+                        <a href="./index.html">智东西</a>
+                        <a href="./index.html">WEIBUSI</a>
                     </li>
                     <li>
-                        <a href="">搜狐IT</a>
-                        <a href="">腾讯科技</a>
+                        <a href="./index.html">搜狐IT</a>
+                        <a href="./index.html">腾讯科技</a>
                     </li>
                     <li>
-                        <a href="">搜狐数码</a>
-                        <a href="">凤凰科技</a>
+                        <a href="./index.html">搜狐数码</a>
+                        <a href="./index.html">凤凰科技</a>
                     </li>
                     <li>
-                        <a href="">凤凰数码</a>
-                        <a href="">PConline</a>
+                        <a href="./index.html">凤凰数码</a>
+                        <a href="./index.html">PConline</a>
                     </li>
                     <li>
-                        <a href="">泡泡网</a>
-                        <a href="">3W咖啡</a>
+                        <a href="./index.html">泡泡网</a>
+                        <a href="./index.html">3W咖啡</a>
                     </li>
                     <li>
-                        <a href="">ZUK社区</a>
-                        <a href="">亿觅emie</a>
+                        <a href="./index.html">ZUK社区</a>
+                        <a href="./index.html">亿觅emie</a>
                     </li>
                     <li>
-                        <a href="">极客公园</a>
-                        <a href="">易迅易启玩</a>
+                        <a href="./index.html">极客公园</a>
+                        <a href="./index.html">易迅易启玩</a>
                     </li>
                     <li>
-                        <a href="">果库</a>
+                        <a href="./index.html">果库</a>
                     </li>
                 </ul>
                 <!-- 第三列 -->
                 <ul>
                     <li>购买攻略</li>
-                    <li><a href="">美亚海淘教程</a></li>
-                    <li><a href="">日亚海淘教程</a></li>
-                    <li><a href="">海淘转运攻略</a></li>
-                    <li><a href="">kickstarter 众筹购买攻略</a></li>
-                    <li><a href="">indiegogo 众筹购买攻略</a></li>
+                    <li><a href="./index.html">美亚海淘教程</a></li>
+                    <li><a href="./index.html">日亚海淘教程</a></li>
+                    <li><a href="./index.html">海淘转运攻略</a></li>
+                    <li><a href="./index.html">kickstarter 众筹购买攻略</a></li>
+                    <li><a href="./index.html">indiegogo 众筹购买攻略</a></li>
                 </ul>
                 <!-- 第四列 -->
                 <ul>
                     <li>厂商合作</li>
-                    <li><a href="">关于极果</a></li>
-                    <li><a href="">联系我们</a></li>
-                    <li><a href="">商务合作：BD@jiguo.com</a></li>
-                    <li><a href="">CEO邮箱：CEO@jiguo.com</a></li>
+                    <li><a href="./b-sw-a.html">关于极果</a></li>
+                    <li><a href="./b-sw-a.html#sw">联系我们</a></li>
+                    <li><a href="./b-sw-a.html">商务合作：BD@jiguo.com</a></li>
+                    <li><a href="./b-sw-a.html">CEO邮箱：CEO@jiguo.com</a></li>
                 </ul>
             </div>
         </div>
