--- a/top.html
+++ b/top.html
@@ -17,7 +17,7 @@
         <div>
             <!-- 左侧 -->
             <div>
-                <a href=""></a>
+                <a href="./index.html"></a>
                 <a href="">首页</a>
                 <a href="">酷玩</a>
                 <a href="">导购</a>
