新增了跳转cookie功能

--- a/login.html
+++ b/login.html
@@ -18,12 +18,10 @@
         <p>登录极果</p>
         <!-- 版心 -->
         <div>
-            <input type="text" placeholder="请登录手机号">
-            <span class="h-span">请输入11位手机哈</span>
-            <input type="text" placeholder="请输新密码">
-            <span class="h-span">请输入11位手机哈</span>
-            <input type="text" placeholder="请确定新密码">
-            <span class="h-span">请输入11位手机哈</span>
+            <input type="text" id="phone" placeholder="请登录手机号">
+            <span class="h-span"></span>
+            <input type="password" id="pass" placeholder="请输新密码">
+            <span class="h-span"></span>
             <button id="zc">立即登录</button>
         </div>
     </div>
@@ -32,3 +30,5 @@
 </body>
 
 </html>
+<script src="./toolkit/cookie.js"></script>
+<script src="./login.js"></script>
