--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
+    <!-- 引入顶部 -->
+    <iframe src="./top.html" id="ifname-1" frameborder="0"></iframe>
+    <nav>
+        <div>
+            <h1>幻响小贝HiFi2.1音箱</h1>
+            <p><span>126</span>人申请</p>
+            <p>￥599</p>
+            <p><span>20</span>台</p>
+            <p>申请时间剩余：<span>13天5小时37分钟</span></p>
+            <button>立即申请</button>
+        </div>
+    </nav>
 </body>
 
 </html>
