--- a/register.html
+++ b/register.html
@@ -18,19 +18,19 @@
         <p>注册极果</p>
         <!-- 版心 -->
         <div>
-            <input type="text" placeholder="请登录手机号"><span class="h-span">请输入11位手机哈</span>
-            <input type="text" placeholder="请输入图片校验码">
+            <input type="text" id="phone" placeholder="请登录手机号"><span class="h-span"></span>
+            <input type="text" id="verify-1" placeholder="请输入图片校验码">
             <span id="r-span"></span>
-            <span class="h-span">请输入11位手机哈</span>
-            <input type="text" placeholder="请输入4位数字验证码">
-            <button>获取验证码</button>
-            <span class="h-span">请输入11位手机哈</span>
-            <input type="text" placeholder="请输入用户名">
-            <span class="h-span">请输入11位手机哈</span>
-            <input type="text" placeholder="请输新密码">
-            <span class="h-span">请输入11位手机哈</span>
-            <input type="text" placeholder="请确定新密码">
-            <span class="h-span">请输入11位手机哈</span>
+            <span class="h-span"></span>
+            <input type="text" id="verify-2" placeholder="请输入4位数字验证码">
+            <button id="verify_button">获取验证码</button>
+            <span class="h-span"></span>
+            <input type="text" id="username" placeholder="请输入用户名">
+            <span class="h-span"></span>
+            <input type="password" id="pass" placeholder="请输新密码">
+            <span class="h-span"></span>
+            <input type="password" id="newPass" placeholder="请确定新密码">
+            <span class="h-span"></span>
             <button id="zc">立即注册</button>
         </div>
     </div>
@@ -39,3 +39,5 @@
 </body>
 
 </html>
+<script src="./toolkit/cookie.js"></script>
+<script src="./register.js"></script>
