--- a/top.html
+++ b/top.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/top.css">
+    <style>
+
+    </style>
 </head>
 
 <body>
@@ -17,12 +20,12 @@
         <div>
             <!-- 左侧 -->
             <div>
-                <a href="./index.html"></a>
-                <a href="">首页</a>
+                <a href=""><img src="./img/logonew.png" alt=""></a>
+                <a href="./index.html">首页</a>
                 <a href="">酷玩</a>
                 <a href="">导购</a>
                 <a href="">试用</a>
-                <a href="">报告</a>
+                <a href="./report/hottest.html">报告</a>
             </div>
             <!-- 右 侧 -->
             <div>
