新增同步用户名功能

--- a/bottom.html
+++ b/bottom.html
@@ -34,60 +34,60 @@
                 <!-- 第一列 -->
                 <ul>
                     <li>免费试用</li>
-                    <li><a href="./b-mf-a.html">试用流程</a></li>
-                    <li><a href="./b-mf-a.html#mf">如何提高成功率</a></li>
+                    <li><a class="a_right" href="JavaScript:void(0)">试用流程</a></li>
+                    <li><a class="a1_right" href="JavaScript:void(0)">如何提高成功率</a></li>
                 </ul>
                 <!-- 第二列 -->
                 <ul>
                     <li>友情链接</li>
                     <li>
-                        <a href="./index.html">智东西</a>
-                        <a href="./index.html">WEIBUSI</a>
+                        <a class="a_right" href="JavaScript:void(0)">智东西</a>
+                        <a class="a_right" href="JavaScript:void(0)">WEIBUSI</a>
                     </li>
                     <li>
-                        <a href="./index.html">搜狐IT</a>
-                        <a href="./index.html">腾讯科技</a>
+                        <a class="a_right" href="JavaScript:void(0)">搜狐IT</a>
+                        <a class="a_right" href="JavaScript:void(0)">腾讯科技</a>
                     </li>
                     <li>
-                        <a href="./index.html">搜狐数码</a>
-                        <a href="./index.html">凤凰科技</a>
+                        <a class="a_right" href="JavaScript:void(0)">搜狐数码</a>
+                        <a class="a_right" href="JavaScript:void(0)">凤凰科技</a>
                     </li>
                     <li>
-                        <a href="./index.html">凤凰数码</a>
-                        <a href="./index.html">PConline</a>
+                        <a class="a_right" href="JavaScript:void(0)">凤凰数码</a>
+                        <a class="a_right" href="JavaScript:void(0)">PConline</a>
                     </li>
                     <li>
-                        <a href="./index.html">泡泡网</a>
-                        <a href="./index.html">3W咖啡</a>
+                        <a class="a_right" href="JavaScript:void(0)">泡泡网</a>
+                        <a class="a_right" href="JavaScript:void(0)">3W咖啡</a>
                     </li>
                     <li>
-                        <a href="./index.html">ZUK社区</a>
-                        <a href="./index.html">亿觅emie</a>
+                        <a class="a_right" href="JavaScript:void(0)">ZUK社区</a>
+                        <a class="a_right" href="JavaScript:void(0)">亿觅emie</a>
                     </li>
                     <li>
-                        <a href="./index.html">极客公园</a>
-                        <a href="./index.html">易迅易启玩</a>
+                        <a class="a_right" href="JavaScript:void(0)">极客公园</a>
+                        <a class="a_right" href="JavaScript:void(0)">易迅易启玩</a>
                     </li>
                     <li>
-                        <a href="./index.html">果库</a>
+                        <a class="a_right" href="JavaScript:void(0)">果库</a>
                     </li>
                 </ul>
                 <!-- 第三列 -->
                 <ul>
                     <li>购买攻略</li>
-                    <li><a href="./index.html">美亚海淘教程</a></li>
-                    <li><a href="./index.html">日亚海淘教程</a></li>
-                    <li><a href="./index.html">海淘转运攻略</a></li>
-                    <li><a href="./index.html">kickstarter 众筹购买攻略</a></li>
-                    <li><a href="./index.html">indiegogo 众筹购买攻略</a></li>
+                    <li><a class="a_right" href="JavaScript:void(0)">美亚海淘教程</a></li>
+                    <li><a class="a_right" href="JavaScript:void(0)">日亚海淘教程</a></li>
+                    <li><a class="a_right" href="JavaScript:void(0)">海淘转运攻略</a></li>
+                    <li><a class="a_right" href="JavaScript:void(0)">kickstarter 众筹购买攻略</a></li>
+                    <li><a class="a_right" href="JavaScript:void(0)">indiegogo 众筹购买攻略</a></li>
                 </ul>
                 <!-- 第四列 -->
                 <ul>
                     <li>厂商合作</li>
-                    <li><a href="./b-sw-a.html">关于极果</a></li>
-                    <li><a href="./b-sw-a.html#sw">联系我们</a></li>
-                    <li><a href="./b-sw-a.html">商务合作：BD@jiguo.com</a></li>
-                    <li><a href="./b-sw-a.html">CEO邮箱：CEO@jiguo.com</a></li>
+                    <li><a class="a_right-1" href="JavaScript:void(0)">关于极果</a></li>
+                    <li><a class="a_right-11" href="JavaScript:void(0)">联系我们</a></li>
+                    <li><a class="a_right-1" href="JavaScript:void(0)">商务合作：BD@jiguo.com</a></li>
+                    <li><a class="a_right-1" href="JavaScript:void(0)">CEO邮箱：CEO@jiguo.com</a></li>
                 </ul>
             </div>
         </div>
@@ -96,3 +96,4 @@
 </body>
 
 </html>
+<script src="./buttom.js"></script>
