--- a/top.html
+++ b/top.html
@@ -19,21 +19,24 @@
         <!-- 版心 -->
         <div>
             <!-- 左侧 -->
-            <div>
-                <a href=""><img src="./img/logonew.png" alt=""></a>
-                <a href="./index.html">首页</a>
-                <a href="">酷玩</a>
-                <a href="">导购</a>
-                <a href="">试用</a>
-                <a href="./report/hottest.html">报告</a>
+            <div class="head_left">
+                <a href="JavaScript:void(0)"><img src="./img/logonew.png" alt=""></a>
+                <a href="JavaScript:void(0)">首页</a>
+                <a href="JavaScript:void(0)">酷玩</a>
+                <a href="JavaScript:void(0)">导购</a>
+                <a href="JavaScript:void(0)">试用</a>
+                <a href="JavaScript:void(0)">报告</a>
             </div>
             <!-- 右 侧 -->
             <div>
                 <img src="./img/fdj.png" alt="">
-                <button>注册</button>
+                <button id="top_zc">注册</button>
+                <p id="top_user"></p>
             </div>
         </div>
     </header>
 </body>
 
-</html>
+</html>\
+<script src="./toolkit/cookie.js"></script>
+<script src="./top.js"></script>
