'rsc第二次提交'

--- a/trial/yjs.html
+++ b/trial/yjs.html
@@ -17,15 +17,15 @@
     <div class="nav">
         <h1>免费试用</h1>
         <div class="nav-b">
-            <a href="">大众试用</a>
-            <a href="">体验师专享</a>
+            <a href="./DZtrial.html">大众试用</a>
+            <a href="./experience.html">体验师专享</a>
         </div>
     </div>
     <div class="nav-b1">
-        <a href="">全部</a>
-        <a href="">申请中</a>
-        <a href="">试用中</a>
-        <a href="">已结束</a>
+        <a href="./DZtrial.html">全部</a>
+        <a href="./sqz.html">申请中</a>
+        <a href="./syz.html">试用中</a>
+        <a href="./yjs.html">已结束</a>
     </div>
     <!-- 内容部分 -->
     <div class="big">
@@ -34,7 +34,7 @@
                 <li>
                     <a href="">
                         <span>首发</span>
-                        <img src="../img/hot5.jpg" alt="">
+                        <img src="../img/hot12.jpg" alt="">
                         <div class="all-btm">
                             <h2>巴慕达 The Toaster 烤面包机</h2>
                             <p><span>2032</span><span>20台</span></p>
@@ -46,7 +46,7 @@
                 <li>
                     <a href="">
                         <span>首发</span>
-                        <img src="../img/hot9.jpg" alt="">
+                        <img src="../img/hot5.jpg" alt="">
                         <div class="all-btm">
                             <h2>巴慕达 The Toaster 烤面包机</h2>
                             <p><span>2032</span><span>20台</span></p>
