--- a/report/hottest.html
+++ b/report/hottest.html
@@ -17,152 +17,159 @@
     <div class="nav">
         <h1>体验报告</h1>
         <div class="nav-b">
-            <a href="">最新</a>
-            <a href="">最热</a>
+            <a href="./newest.html">最新</a>
+            <a href="./hottest.html">最热</a>
         </div>
     </div>
     <!-- 内容部分 -->
     <div class="big">
         <div class="box">
-            <!-- 内容左边部分 -->
-            <ul>
-                <li>
-                    <a href="">
-                        <div class="angle">
-                            <img src="../img/bg1.jpg" alt="">
-                            <div class="pic-txt">
-                                <p>
-                                    空气净化器里面学问多得惊呆你，你选对了吗
-                                </p>
-                                <div class="pic-con">
+            <div class="box-l">
+                <!-- 内容左边部分 -->
+                <ul>
+                    <li>
+                        <a href="">
+                            <div class="angle">
+                                <img src="../img/bg8.jpg" alt="">
+                                <div class="pic-txt">
                                     <p>
-                                        <span></span>
-                                        <span>苏苏</span>
-                                        <span>2016-01-25</span>
+                                        空气净化器里面学问多得惊呆你，你选对了吗
                                     </p>
-                                    <p>
-                                        <span>3</span>
-                                        <span>3</span>
-                                    </p>
+                                    <div class="pic-con">
+                                        <p>
+                                            <span></span>
+                                            <span>苏苏</span>
+                                            <span>2016-01-25</span>
+                                        </p>
+                                        <p>
+                                            <span>3</span>
+                                            <span>3</span>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="li-btm">
-                            关于云马智行车 C1还有 8 篇报告，点击查看
-                        </div>
-                    </a>
-                </li>
+                            <div class="li-btm">
+                                关于云马智行车 C1还有 8 篇报告，点击查看
+                            </div>
+                        </a>
+                    </li>
 
-                <li>
-                    <a href="">
-                        <div class="angle">
-                            <img src="../img/bg2.jpg" alt="">
-                            <div class="pic-txt">
-                                <p>
-                                    云马智行车 C1小巧清新，简洁流畅的线条为城市骑行增添一抹亮丽色彩
-                                </p>
-                                <div class="pic-con">
+                    <li>
+                        <a href="">
+                            <div class="angle">
+                                <img src="../img/bg7.jpg" alt="">
+                                <div class="pic-txt">
                                     <p>
-                                        <span></span>
-                                        <span>苏苏</span>
-                                        <span>2016-01-25</span>
+                                        云马智行车 C1小巧清新，简洁流畅的线条为城市骑行增添一抹亮丽色彩
                                     </p>
-                                    <p>
-                                        <span>3</span>
-                                        <span>3</span>
-                                    </p>
+                                    <div class="pic-con">
+                                        <p>
+                                            <span></span>
+                                            <span>苏苏</span>
+                                            <span>2016-01-25</span>
+                                        </p>
+                                        <p>
+                                            <span>3</span>
+                                            <span>3</span>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="li-btm">
-                            关于格林威特空气净化器还有 4 篇报告，点击查看
-                        </div>
-                    </a>
-                </li>
+                            <div class="li-btm">
+                                关于格林威特空气净化器还有 4 篇报告，点击查看
+                            </div>
+                        </a>
+                    </li>
 
 
-                <li>
-                    <a href="">
-                        <div class="angle">
-                            <img src="../img/bg3.jpg" alt="">
-                            <div class="pic-txt">
-                                <p>
-                                    怎么骑都不会累的智能自行车：云马 C1试骑体验
-                                </p>
-                                <div class="pic-con">
+                    <li>
+                        <a href="">
+                            <div class="angle">
+                                <img src="../img/bg6.jpg" alt="">
+                                <div class="pic-txt">
                                     <p>
-                                        <span></span>
-                                        <span>苏苏</span>
-                                        <span>2016-01-25</span>
+                                        怎么骑都不会累的智能自行车：云马 C1试骑体验
                                     </p>
-                                    <p>
-                                        <span>3</span>
-                                        <span>3</span>
-                                    </p>
+                                    <div class="pic-con">
+                                        <p>
+                                            <span></span>
+                                            <span>苏苏</span>
+                                            <span>2016-01-25</span>
+                                        </p>
+                                        <p>
+                                            <span>3</span>
+                                            <span>3</span>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="li-btm">
-                            关于云马智行车 C1还有 8 篇报告，点击查看
-                        </div>
-                    </a>
-                </li>
+                            <div class="li-btm">
+                                关于云马智行车 C1还有 8 篇报告，点击查看
+                            </div>
+                        </a>
+                    </li>
 
-                <li>
-                    <a href="">
-                        <div class="angle">
-                            <img src="../img/bg4.jpg" alt="">
-                            <div class="pic-txt">
-                                <p>
-                                    声音不是最优秀，但它形音完美的结合，足够打动人心
-                                </p>
-                                <div class="pic-con">
+                    <li>
+                        <a href="">
+                            <div class="angle">
+                                <img src="../img/bg5.jpg" alt="">
+                                <div class="pic-txt">
                                     <p>
-                                        <span></span>
-                                        <span>苏苏</span>
-                                        <span>2016-01-25</span>
+                                        声音不是最优秀，但它形音完美的结合，足够打动人心
                                     </p>
-                                    <p>
-                                        <span>3</span>
-                                        <span>3</span>
-                                    </p>
+                                    <div class="pic-con">
+                                        <p>
+                                            <span></span>
+                                            <span>苏苏</span>
+                                            <span>2016-01-25</span>
+                                        </p>
+                                        <p>
+                                            <span>3</span>
+                                            <span>3</span>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="li-btm">
-                            关于Freeson 智能实木音箱还有 17 篇报告，点击查看
-                        </div>
-                    </a>
-                </li>
+                            <div class="li-btm">
+                                关于Freeson 智能实木音箱还有 17 篇报告，点击查看
+                            </div>
+                        </a>
+                    </li>
 
-                <li>
-                    <a href="">
-                        <div class="angle">
-                            <img src="../img/bg5.jpg" alt="">
-                            <div class="pic-txt">
-                                <p>
-                                    内在与颜值并重，MO 智能体质分析仪解开你的身体密码
-                                </p>
-                                <div class="pic-con">
+                    <li>
+                        <a href="">
+                            <div class="angle">
+                                <img src="../img/bg4.jpg" alt="">
+                                <div class="pic-txt">
                                     <p>
-                                        <span></span>
-                                        <span>苏苏</span>
-                                        <span>2016-01-25</span>
+                                        内在与颜值并重，MO 智能体质分析仪解开你的身体密码
                                     </p>
-                                    <p>
-                                        <span>3</span>
-                                        <span>3</span>
-                                    </p>
+                                    <div class="pic-con">
+                                        <p>
+                                            <span></span>
+                                            <span>苏苏</span>
+                                            <span>2016-01-25</span>
+                                        </p>
+                                        <p>
+                                            <span>3</span>
+                                            <span>3</span>
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="li-btm">
-                            关于MO 智能体质分析仪还有 17 篇报告，点击查看
-                        </div>
-                    </a>
-                </li>
+                            <div class="li-btm">
+                                关于MO 智能体质分析仪还有 17 篇报告，点击查看
+                            </div>
+                        </a>
+                    </li>
 
-            </ul>
+                </ul>
+                <!-- 加载更多部分 -->
+                <div class="more">
+                    <button onclick="getData()">向下拉加载更多</button>
+                    <span class="load">正在加载中~~~</span>
+                </div>
+            </div>
             <!-- 内容右边部分 -->
             <div class="box-r">
                 <h3>极果体验师</h3>
@@ -191,7 +198,10 @@
         </div>
     </div>
 
-
+    <!-- 底部 -->
+    <iframe src="../bottom.html" id="iframename2" frameborder="0"></iframe>
 </body>
 
 </html>
+
+<script src="./report-js/hottest.js"></script>
