--- a/trial/DZtrial.html
+++ b/trial/DZtrial.html
@@ -17,15 +17,15 @@
     <div class="nav">
         <h1>免费试用</h1>
         <div class="nav-b">
-            <a href="">大众试用</a>
-            <a href="">体验师专享</a>
+            <a href="./DZtrial.html">大众试用</a>
+            <a href="./experience.html">体验师专享</a>
         </div>
     </div>
     <div class="nav-b1">
-        <a href="">全部</a>
-        <a href="">申请中</a>
-        <a href="">试用中</a>
-        <a href="">已结束</a>
+        <a href="./DZtrial.html" class="clr">全部</a>
+        <a href="./sqz.html">申请中</a>
+        <a href="./syz.html">试用中</a>
+        <a href="./yjs.html">已结束</a>
     </div>
     <!-- 内容部分 -->
     <div class="big">
@@ -216,6 +216,7 @@
                         </div>
                     </a>
                 </li>
+
                 <li>
                     <a href="">
                         <span>首发</span>
@@ -231,7 +232,8 @@
             </ul>
             <!-- 加载更多部分 -->
             <div class="more">
-                <button>向下拉加载更多</button>
+                <button onclick="getData()">向下拉加载更多</button>
+                <span class="load">正在加载中~~~</span>
             </div>
         </div>
     </div>
