--- a/Coldplay/Coldplay-a.html
+++ b/Coldplay/Coldplay-a.html
@@ -1,1 +1,196 @@
-<!-- 点击 a 链接跳转 -->
+<!-- 点击跳转 -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>试用详情</title>
+    <link rel="stylesheet" href="./Coldplay-css/Coldplay-a.css">
+</head>
+
+<body>
+    <!-- 头部 -->
+
+    <iframe src="../top.html" frameborder="0"></iframe>
+
+
+    <!-- 音响 -->
+    <nav>
+        <div id="fly">
+            <h1>幻响小贝HiFi2.1音箱</h1>
+            <p><span id="nav-money">126</span>人申请</p>
+            <p>￥599</p>
+            <p><span id="nav-num">20</span>台</p>
+            <p>申请时间剩余：<span id="nav-time">13天5小时37分钟</span></p>
+            <button id="apply">立即申请</button>
+        </div>
+    </nav>
+    <!--试用流程-->
+    <div class="box">
+        <div id="box_1">
+            <div id="box1">试用流程</div>
+            <ul>
+                <li>
+                    <p>开放申请</p>
+                </li>
+                <li>
+                    <p>名单公布</p>
+                </li>
+                <li>
+                    <p>产品试用</p>
+                </li>
+                <li>
+                    <p>提交反馈</p>
+                </li>
+                <li>
+                    <p>活动结束</p>
+                </li>
+
+            </ul>
+        </div>
+        <!--试用报告详情-->
+
+        <div class="fi">
+            <div class="left">
+                <h3 class="txet1"><span>&nbsp;&nbsp;产品介绍</span></h3>
+                <p class="top">多重功能集成的便携控制中心：半果控制中心。</p>
+                <p>&nbsp;</p>
+                <video height="433.3333333333333" width="650"
+                    src="http://v.qq.com/iframe/player.html?vid=k0183q3yesv&amp;auto=0&amp;width=650&amp;height=433.3333333333333&amp;auto=0"
+                    poster="../img/use1.jpg"></video>
+                <p>&nbsp;</p>
+                <p class="little">结构设计</p>
+                <p>&nbsp;</p>
+                <p>极致一体化，机身表面没有一丝接缝和一颗螺丝。采用突破性的液态金属质感工艺，无任何键位开关，所有功能同时自然高效运行。</p>
+                <p>&nbsp;</p>
+                <p class="little">无线网络</p>
+                <p>&nbsp;</p>
+                <p>台式机或无自带网卡的电脑只需插入半果控制中心，切换至网卡模式即可接受WiFi信号。还可创建WiFi热点，让你的手机和平板立刻联网。</p>
+                <p>&nbsp;</p>
+                <p><img src="../img/use.jpg" /></p>
+                <p>&nbsp;</p>
+                <p class="little">蓝牙连接</p>
+                <p>&nbsp;</p>
+                <p>先进的超低功耗蓝牙4.1，设备配对连接更便捷。可将所有设备连接至一台控制中心，数据传输速率大幅提高。</p>
+                <p>&nbsp;</p>
+                <p class="little">独立声卡</p>
+                <p>&nbsp;</p>
+                <p>配备德州仪器HiFi芯片，内置Max Bass技术，带来更高解析力音质。并且采用独立耳机放大器，内置麦克风，任何软件都可轻松调用。</p>
+                <p>&nbsp;</p>
+                <p class="little">极速充电</p>
+                <p>&nbsp;</p>
+                <p>支持QC 2.0快充协议，使用一根Type-C线，4个USB可同时极速快充，并且每个接口都拥有芯片级的4重保护，告别插线板和充电器。</p>
+                <p>&nbsp;</p>
+                <h3 class="txet1"><span>&nbsp;&nbsp;活动介绍</span></h3>
+                <div class="text">
+                    <p>点击申请按钮报名，报名成功后记得邀请好友一起来参与哦~邀请好友数前十名将根据申请理由和影响力抽取一位直接获得试用机会。请认真填写申请理由，展现有创意的试用计划。进入手机端完善个人主页信息，可以大大提高申请通过几率哦~
+                    </p>
+                    <p>&nbsp;</p>
+                    <p class="blue">试用报告要求100% 原创，抄袭会被封杀哦！</p>
+                    <p>&nbsp;</p>
+                    <p class="red">活动流程</p>
+                    <p>1.<strong>名单公布</strong>：试用名单将在活动页公布</p>
+                    <p>2.<strong>试用通知</strong>：名单公布后客服将以短信的方式通知申请成功者，2天不回复算弃权</p>
+                    <p>3.<strong>押金收取</strong>：客服将统一通知大家收取产品押金</p>
+                    <p>4.<strong>产品寄送</strong>：收到押金后第一时间将产品快递给大家</p>
+                    <p>5.<strong>网络晒单</strong>：收货后请在微博或朋友圈等社交网络晒单</p>
+                    <p>6.<strong>试用报告</strong>：收到货的10天内完成报告并上传</p>
+                    <p>7.<strong>产品回收</strong>：选取6篇优秀报告，赠送产品</p>
+                    <p>8.<strong>押金退回</strong>：活动结束返还，人为损坏须赔偿</p>
+                    <p>&nbsp;</p>
+                    <p class="red">活动时间</p>
+                    <p>1.<strong>申请报名</strong>：2016/02/02－2016/02/17（截至24点）</p>
+                    <p>2.<strong>公布名单</strong>：2016/02/20</p>
+                    <p>3.<strong>发货日期</strong>：2016/02/22（以实际为准）</p>
+                    <p>4.<strong>试用期限</strong>：收到产品后10天内</p>
+                    <p>&nbsp;</p>
+                    <p>&nbsp;</p>
+                </div>
+            </div>
+            <!-- 购买渠道 -->
+            <h3 class="txet1"><span>&nbsp;&nbsp;购买渠道</span></h3>
+				<p class="money">￥ 499</p>
+				<a href="" class="buyBtn">点击购买</a>
+				<p class="resource">来自官网</p>
+                <h3 class="txet1"><span>&nbsp;&nbsp;极果体验师</span></h3>
+				<figure class="imgBox"><img src="../img/tiyanImg.jpg"/></figure>
+				<div class="info">
+					<h5>福利</h5>
+					<p class="text3">第一时间体验新品，大众试用优先通过，还有定向邀请试用，新品玩到手软！</p>
+					<h5>要求</h5>
+					<p class="text3">是某个领域的大神级玩家，在社交网络或圈子里有大影响力，善写作会拍摄。</p>
+					<h5>申请</h5>
+					<p class="text3">1. 关注极果公众号：jguojguo<br>（或扫描下方二维码）<br>2. 在公众号内回复：体验师</p>
+				</div>
+                <p>&nbsp;</p>
+                <h3 class="txet1"><span>&nbsp;&nbsp;关注我们</span></h3>
+                <div class="guanzhu">
+                    <figure class="imgBox"><img src="../img/myCode.jpg"/></figure>
+                </div>
+        </div>
+        <!-- 热门试用 -->
+       <div class="txet2">热门试用
+        <a class="more" href=>查看更多</a>
+        <ul>
+            <li>
+                <a href="">
+                    <span>首发</span>
+                    <img src="../img/hot1.jpg" alt="">
+                    <div class="all-btm">
+                        <h2>巴慕达 The Toaster 烤面包机</h2>
+                        <p><span>2032</span><span>20台</span></p>
+                        <p><span>1392</span>申请</p>
+                        <p>剩余时间：2天</p>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span>首发</span>
+                    <img src="../img/hot2.jpg" alt="">
+                    <div class="all-btm">
+                        <h2>Osprey小鹰户外运动专业腰包</h2>
+                        <p><span>2032</span><span>20台</span></p>
+                        <p><span>1392</span>申请</p>
+                        <p>剩余时间：2天</p>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span>首发</span>
+                    <img src="../img/hot3.jpg" alt="">
+                    <div class="all-btm">
+                        <h2>Liquid Image 338 运动摄像眼镜</h2>
+                        <p><span>2032</span><span>20台</span></p>
+                        <p><span>1392</span>申请</p>
+                        <p>剩余时间：2天</p>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <span>首发</span>
+                    <img src="../img/hot1.jpg" alt="">
+                    <div class="all-btm">
+                        <h2>巴慕达 The Toaster 烤面包机</h2>
+                        <p><span>2032</span><span>20台</span></p>
+                        <p><span>1392</span>申请</p>
+                        <p>剩余时间：2天</p>
+                    </div>
+                </a>
+            </li>
+        </ul>
+</div>
+    <!-- 底部 -->
+    <iframe src="../bottom.html" class="bbc"></iframe>
+    </div>
+    
+
+    
+</body>
+
+</html>
+<script src="./coldpay-js/Coldplay-a.js"></script>
