--- a/Coldplay/newest.html
+++ b/Coldplay/newest.html
@@ -1,1 +1,519 @@
-<!-- 最新 -->
+<!-- 品类 -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>酷玩_品类</title>
+    <link rel="stylesheet" href="./Coldplay-css/newest.css">
+</head>
+
+<body>
+    <!-- 头部 -->
+  
+        <iframe src="../top.html" frameborder="0"></iframe>
+
+    <div class="wrap">
+        <h1>发现酷玩</h1>
+    </div>
+    <div class="nav">
+        <a href="./category.html" >最新</a>
+        <a href="./hottest.html" >最热</a>
+        <a href="#" id="on">品类</a>
+    </div>
+    <!-- 发现酷玩 -->
+    <div class="newest">
+        <div class="newest-1">
+            <ul>
+				<!--生活-->
+				<li>
+					<dl>
+						<dt>生活</dt>
+						<dd>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_1.png"/>
+									<p class="info">空气净化器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_2.png"/>
+									<p class="info">吸尘器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_3.png"/>
+									<p class="info">扫地机器人（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_4.png"/>
+									<p class="info">电风扇（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_5.png"/>
+									<p class="info">净水壶（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_6.png"/>
+									<p class="info">电饭煲（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_7.png"/>
+									<p class="info">咖啡机（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_8.png"/>
+									<p class="info">原汁机（21）</p>
+								</a>
+							</div>
+						</dd>
+						<dd>
+							<div class="list">
+								<a href="">
+									<p class="info">电视（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">空调（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">洗衣机（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">加湿器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">净水壶（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">热水器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">咖啡机（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">原汁机（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">消毒/洗碗机（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">豆浆机（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">扫地机器人（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">电风扇（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">除湿机（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">干燥机（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">取暖器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">原汁机（21）</p>
+								</a>
+							</div>
+						</dd>
+					</dl>
+				</li>
+				<!--个人护理-->
+				<li>
+					<dl>
+						<dt>个人护理</dt>
+						<dd>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_9.png"/>
+									<p class="info">电动牙刷（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_10.png"/>
+									<p class="info">剃须刀（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_11.png"/>
+									<p class="info">按摩器（21）</p>
+								</a>
+							</div>
+						</dd>
+						<dd>
+							<div class="list">
+								<a href="">
+									<p class="info">冲牙器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">洁面仪（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">蒸面器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">加湿器（21）</p>
+								</a>
+							</div>
+						</dd>
+					</dl>
+				</li>
+				<!--健康-->
+				<li>
+					<dl>
+						<dt>健康</dt>
+						<dd>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_1.png"/>
+									<p class="info">电动牙刷（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_2.png"/>
+									<p class="info">剃须刀（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_3.png"/>
+									<p class="info">按摩器（21）</p>
+								</a>
+							</div>
+						</dd>
+						<dd>
+							<div class="list">
+								<a href="">
+									<p class="info">冲牙器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">洁面仪（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">蒸面器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">加湿器（21）</p>
+								</a>
+							</div>
+						</dd>
+					</dl>
+				</li>
+				<!--智能穿戴-->
+				<li>
+					<dl>
+						<dt>智能穿戴</dt>
+						<dd>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_9.png"/>
+									<p class="info">电动牙刷（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_4.png"/>
+									<p class="info">剃须刀（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_5.png"/>
+									<p class="info">按摩器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_6.png"/>
+									<p class="info">电动牙刷（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_7.png"/>
+									<p class="info">剃须刀（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_8.png"/>
+									<p class="info">按摩器（21）</p>
+								</a>
+							</div>
+						</dd>
+						<dd>
+							<div class="list">
+								<a href="">
+									<p class="info">冲牙器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">洁面仪（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">蒸面器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">加湿器（21）</p>
+								</a>
+							</div>
+						</dd>
+					</dl>
+				</li>
+				<!--出行-->
+				<li>
+					<dl>
+						<dt>出行</dt>
+						<dd>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_11.png"/>
+									<p class="info">电动牙刷（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_2.png"/>
+									<p class="info">剃须刀（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_9.png"/>
+									<p class="info">按摩器（21）</p>
+								</a>
+							</div>
+						</dd>
+						<dd>
+							<div class="list">
+								<a href="">
+									<p class="info">冲牙器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">洁面仪（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">蒸面器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">加湿器（21）</p>
+								</a>
+							</div>
+						</dd>
+					</dl>
+				</li>
+				<!--运动户外-->
+				<li>
+					<dl>
+						<dt>运动户外</dt>
+						<dd>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_10.png"/>
+									<p class="info">电动牙刷（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_8.png"/>
+									<p class="info">剃须刀（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_5.png"/>
+									<p class="info">按摩器（21）</p>
+								</a>
+							</div>
+						</dd>
+						<dd>
+							<div class="list">
+								<a href="">
+									<p class="info">冲牙器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">洁面仪（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">蒸面器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">加湿器（21）</p>
+								</a>
+							</div>
+						</dd>
+					</dl>
+				</li>
+				<!--摄影-->
+				<li>
+					<dl>
+						<dt>摄影</dt>
+						<dd>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_3.png"/>
+									<p class="info">电动牙刷（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_2.png"/>
+									<p class="info">剃须刀（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_9.png"/>
+									<p class="info">按摩器（21）</p>
+								</a>
+							</div>
+						</dd>
+						<dd>
+							<div class="list">
+								<a href="">
+									<p class="info">冲牙器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">洁面仪（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">蒸面器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">加湿器（21）</p>
+								</a>
+							</div>
+						</dd>
+					</dl>
+				</li>
+				<!--手机-->
+				<li>
+					<dl>
+						<dt>手机</dt>
+						<dd>
+							<div class="list">
+								<a href="">
+									<img src="../img/cat_11.png"/>
+									<p class="info">电动牙刷（21）</p>
+								</a>
+							</div>
+						</dd>
+						<dd>
+							<div class="list">
+								<a href="">
+									<p class="info">冲牙器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">洁面仪（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">蒸面器（21）</p>
+								</a>
+							</div>
+							<div class="list">
+								<a href="">
+									<p class="info">加湿器（21）</p>
+								</a>
+							</div>
+						</dd>
+					</dl>
+				</li>
+			</ul>
+        </div>
+       
+    </div>
+    <!-- 底部 -->
+    <iframe src="../bottom.html" frameborder="0" class="bbc"></iframe>
+</body>
+
+</html>
+<!-- <script src="./coldpay-js/hottest.js"></script> -->
