'rsc第四次提交'

--- a/shopping/hottest.html
+++ b/shopping/hottest.html
@@ -26,21 +26,21 @@
         <div class="all">
             <ul>
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g4.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
                     <div></div>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g3.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
                     <div></div>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g2.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
@@ -48,7 +48,7 @@
 
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g1.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
@@ -56,21 +56,21 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g4.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
                     <div></div>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g3.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
                     <div></div>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g2.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
@@ -78,7 +78,7 @@
 
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g1.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
@@ -86,21 +86,21 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g4.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
                     <div></div>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g3.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
                     <div></div>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g2.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
@@ -108,7 +108,7 @@
 
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g1.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
@@ -116,21 +116,21 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g4.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
                     <div></div>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g3.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
                     <div></div>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g2.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
@@ -138,7 +138,7 @@
 
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g1.jpg" alt=""></a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
                     <p><span class="sp1" onclick="fn(this)">3</span><span class="sp2">3</span></p>
