--- a/trial/sqz.html
+++ b/trial/sqz.html
@@ -32,7 +32,7 @@
         <div class="all">
             <ul>
                 <li>
-                    <a href="">
+                    <a href="../Coldplay/Coldplay-a.html">
                         <span>首发</span>
                         <img src="../img/hot9.jpg" alt="">
                         <div class="all-btm">
@@ -44,7 +44,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../Coldplay/Coldplay-a.html">
                         <span>首发</span>
                         <img src="../img/hot10.jpg" alt="">
                         <div class="all-btm">
@@ -56,7 +56,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../Coldplay/Coldplay-a.html">
                         <span>首发</span>
                         <img src="../img/hot11.jpg" alt="">
                         <div class="all-btm">
@@ -68,7 +68,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../Coldplay/Coldplay-a.html">
                         <span>首发</span>
                         <img src="../img/hot1.jpg" alt="">
                         <div class="all-btm">
@@ -82,7 +82,7 @@
 
 
                 <li>
-                    <a href="">
+                    <a href="../Coldplay/Coldplay-a.html">
                         <span>首发</span>
                         <img src="../img/hot11.jpg" alt="">
                         <div class="all-btm">
@@ -94,7 +94,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../Coldplay/Coldplay-a.html">
                         <span>首发</span>
                         <img src="../img/hot2.jpg" alt="">
                         <div class="all-btm">
@@ -106,7 +106,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../Coldplay/Coldplay-a.html">
                         <span>首发</span>
                         <img src="../img/hot3.jpg" alt="">
                         <div class="all-btm">
@@ -118,7 +118,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../Coldplay/Coldplay-a.html">
                         <span>首发</span>
                         <img src="../img/hot4.jpg" alt="">
                         <div class="all-btm">
@@ -136,7 +136,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="">
+                    <a href="../Coldplay/Coldplay-a.html">
                         <span>首发</span>
                         <img src="../img/hot5.jpg" alt="">
                         <div class="all-btm">
@@ -148,7 +148,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../Coldplay/Coldplay-a.html">
                         <span>首发</span>
                         <img src="../img/hot6.jpg" alt="">
                         <div class="all-btm">
@@ -160,7 +160,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="">
+                    <a href="../Coldplay/Coldplay-a.html">
                         <span>首发</span>
                         <img src="../img/hot7.jpg" alt="">
                         <div class="all-btm">
