--- a/shopping/newest.html
+++ b/shopping/newest.html
@@ -26,7 +26,7 @@
         <div class="all">
             <ul>
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g1.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -36,7 +36,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g2.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -46,7 +46,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g3.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -56,7 +56,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g4.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -66,7 +66,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g1.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -76,7 +76,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g2.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -86,7 +86,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g3.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -96,7 +96,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g4.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -106,7 +106,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g1.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -116,7 +116,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g2.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -126,7 +126,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g3.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -136,7 +136,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g4.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -146,7 +146,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g1.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -156,7 +156,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g2.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -166,7 +166,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g3.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
@@ -176,7 +176,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../report/report-a.html">
                         <img src="../img/g4.jpg" alt="">
                     </a>
                     <p>花万元把蜗居秒变“豪宅”？这12件家具就能帮你办到</p>
